--- a/test2/index.html
+++ b/test2/index.html
@@ -99,16 +99,20 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
 .unread-divider::after{content:'';position:absolute;left:0;right:0;height:1px;background:rgba(255,255,255,0.1)}
 
 /* CALLS */
-#callOverlay{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.75);z-index:10000;flex-direction:column;color:#fff}
-.callCard{background:#071215;padding:32px;border-radius:12px;display:flex;flex-direction:column;align-items:center;gap:14px;min-width:320px}
-.callName{font-size:20px;font-weight:700}
-.callBtns{display:flex;gap:16px}
-.btnCall{padding:12px 18px;border-radius:10px;border:0;font-weight:700;cursor:pointer}
-.btnAccept{background:var(--accent);color:#071215}
+#callOverlay{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:#0b141a;z-index:10000;flex-direction:column;color:#fff}
+.callCard{background:#071215;padding:40px 20px;border-radius:24px;display:flex;flex-direction:column;align-items:center;gap:20px;width:100%;height:100%;max-width:450px;justify-content: space-between;}
+.callAvatar{width:120px;height:120px;border-radius:50%;background:#2a3942;display:flex;align-items:center;justify-content:center;font-size:50px;overflow:hidden;border:3px solid var(--accent)}
+.callAvatar img{width:100%;height:100%;object-fit:cover}
+.callName{font-size:24px;font-weight:700}
+.callStatusText{font-size:16px;color:var(--accent);margin-top:-10px}
+.callBtns{display:flex;gap:40px;margin-bottom:20px}
+.circleBtn{width:65px;height:65px;border-radius:50%;border:0;display:flex;align-items:center;justify-content:center;font-size:24px;cursor:pointer;transition:transform 0.2s}
+.circleBtn:active{transform:scale(0.9)}
+.btnAccept{background:var(--accent);color:#fff}
 .btnDecline{background:#ff3b30;color:#fff}
-#callTimer{font-size:14px;color:var(--muted)}
-#inCallBar{position:fixed;left:50%;transform:translateX(-50%);bottom:22px;background:rgba(0,0,0,.6);padding:8px 12px;border-radius:20px;color:#fff;display:none;z-index:10001;align-items:center;gap:10px}
-#endCallBtn{background:#ff3b30;border:0;color:#fff;padding:8px 12px;border-radius:12px;cursor:pointer}
+.callControls{display:flex;gap:20px;margin-top:20px}
+.ctrlBtn{width:50px;height:50px;border-radius:50%;background:#2a3942;border:none;color:#fff;cursor:pointer;font-size:18px}
+.ctrlBtn.active{background:#fff;color:#000}
 
 /* CUSTOM CONFIRM DELETE MODAL */
 #deleteModal{position:fixed;inset:0;background:rgba(0,0,0,0.8);z-index:10001;display:none;align-items:center;justify-content:center}
@@ -220,21 +224,33 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
 
 <div id="callOverlay">
   <div class="callCard">
-    <div style="font-size:12px;color:var(--muted)">Incoming call</div>
-    <div class="callName" id="callFrom">Caller</div>
-    <div id="callTimer">Ringing...</div>
-    <div class="callBtns">
-      <button class="btnCall btnDecline" id="declineCallBtn">Decline</button>
-      <button class="btnCall btnAccept" id="acceptCallBtn">Accept</button>
+    <div style="text-align:center">
+        <div id="callTypeText" style="font-size:12px;color:var(--muted);margin-bottom:20px">Incoming call</div>
+        <div class="callAvatar" id="callAvatarContainer">?</div>
+        <div class="callName" id="callFrom" style="margin-top:15px">User</div>
+        <div id="callTimer" class="callStatusText">Ringing...</div>
+    </div>
+
+    <div id="activeCallControls" style="display:none; flex-direction: column; align-items: center; gap: 20px;">
+        <div class="callControls">
+            <button class="ctrlBtn" id="muteBtn" title="Mute">🎤</button>
+            <button class="ctrlBtn" id="speakerBtn" title="Speaker">🔊</button>
+        </div>
+        <button class="circleBtn btnDecline" id="endCallBtnBig" style="width:70px; height:70px;">📞</button>
+    </div>
+
+    <div class="callBtns" id="inboundCallBtns">
+      <button class="circleBtn btnDecline" id="declineCallBtn">✕</button>
+      <button class="circleBtn btnAccept" id="acceptCallBtn">✓</button>
+    </div>
+    
+    <div class="callBtns" id="outboundCallBtns" style="display:none">
+        <button class="circleBtn btnDecline" id="cancelCallBtn">✕</button>
     </div>
   </div>
 </div>
 
-<div id="inCallBar">
-  <div id="inCallLabel">Call with <span id="inCallWith"></span></div>
-  <div id="inCallElapsed">00:00</div>
-  <button id="endCallBtn">End</button>
-</div>
+<div id="inCallBar" style="display:none"></div>
 
 <audio id="remoteAudio" autoplay></audio>
 <audio id="ringtone" src="data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAESsAACJWAAACABAAZGF0YQAAAAA=" loop></audio>
@@ -262,11 +278,23 @@ const clearHistoryBtn = document.getElementById('clearHistoryBtn');
 const messagesEl = document.getElementById('messages'), messageInput = document.getElementById('messageInput'), sendBtn = document.getElementById('sendBtn'), statusLine = document.getElementById('statusLine'), onlineCountEl = document.getElementById('onlineCount'), toastEl = document.getElementById('toast');
 const loginWrap = document.getElementById('loginWrap'), nameInput = document.getElementById('nameInput'), joinBtn = document.getElementById('joinBtn');
 const privatePopup = document.getElementById('privatePopup'), privateTitle = document.getElementById('privateTitle'), privateMessages = document.getElementById('privateMessages'), privateInput = document.getElementById('privateInput'), privateSend = document.getElementById('privateSend'), closePrivate = document.getElementById('closePrivate'), callBtn = document.getElementById('callBtn'), blockBtn = document.getElementById('blockBtn'), reportBtn = document.getElementById('reportBtn');
-const callOverlay = document.getElementById('callOverlay'), callFrom = document.getElementById('callFrom'), acceptCallBtn = document.getElementById('acceptCallBtn'), declineCallBtn = document.getElementById('declineCallBtn'), ringtone = document.getElementById('ringtone'), inCallBar = document.getElementById('inCallBar'), inCallWith = document.getElementById('inCallWith'), inCallElapsed = document.getElementById('inCallElapsed'), endCallBtn = document.getElementById('endCallBtn'), dingAudio = document.getElementById('dingAudio');
+const callOverlay = document.getElementById('callOverlay'), callFrom = document.getElementById('callFrom'), acceptCallBtn = document.getElementById('acceptCallBtn'), declineCallBtn = document.getElementById('declineCallBtn'), ringtone = document.getElementById('ringtone'), dingAudio = document.getElementById('dingAudio');
 const settingsBtn = document.getElementById('settingsBtn'), settingsPanel = document.getElementById('settingsPanel'), toggleCall = document.getElementById('toggleCall'), toggleCallKnob = document.getElementById('toggleCallKnob'), togglePrivate = document.getElementById('togglePrivate'), togglePrivateKnob = document.getElementById('togglePrivateKnob'), profileImgInput = document.getElementById('profileImgInput');
 const privImgFile = document.getElementById('privImgFile'), micBtn = document.getElementById('micBtn');
 
 const deleteModal = document.getElementById('deleteModal'), confirmDel = document.getElementById('confirmDel'), cancelDel = document.getElementById('cancelDel');
+
+// New Call DOM
+const callAvatarContainer = document.getElementById('callAvatarContainer');
+const callTypeText = document.getElementById('callTypeText');
+const callTimer = document.getElementById('callTimer');
+const inboundCallBtns = document.getElementById('inboundCallBtns');
+const outboundCallBtns = document.getElementById('outboundCallBtns');
+const activeCallControls = document.getElementById('activeCallControls');
+const muteBtn = document.getElementById('muteBtn');
+const speakerBtn = document.getElementById('speakerBtn');
+const endCallBtnBig = document.getElementById('endCallBtnBig');
+const cancelCallBtn = document.getElementById('cancelCallBtn');
 
 let username = localStorage.getItem('guestName') || '';
 let profileImage = localStorage.getItem('profileImage') || '';
@@ -555,7 +583,6 @@ async function setupWebRTC(callId, isCaller) {
     }
   };
 
-  // Watch for remote candidates
   const other = activeCall.from === username ? activeCall.to : activeCall.from;
   db.ref(`calls/${callId}/candidates/${other}`).on('child_added', snap => {
     peerConnection.addIceCandidate(new RTCIceCandidate(snap.val()));
@@ -570,9 +597,12 @@ async function setupWebRTC(callId, isCaller) {
 
 function watchCallsForMe(){
   db.ref('calls').on('child_added', snap => {
-    const c = snap.val(); if(c.to === username && c.status === 'ringing') {
+    const c = snap.val(); 
+    if(c.to === username && c.status === 'ringing') {
       if(!settings.audioCall) return db.ref(`calls/${snap.key}/status`).set('declined');
-      activeCall = { id: snap.key, ...c }; callOverlay.style.display='flex'; callFrom.textContent=c.from; ringtone.play();
+      activeCall = { id: snap.key, ...c };
+      showCallOverlay(c.from, 'incoming');
+      ringtone.play();
     }
   });
   db.ref('calls').on('child_changed', snap => {
@@ -588,6 +618,31 @@ function watchCallsForMe(){
   });
 }
 
+async function showCallOverlay(otherName, type) {
+  callFrom.textContent = otherName;
+  callOverlay.style.display = 'flex';
+  
+  // Load Profile Photo
+  const prof = await db.ref(`profiles/${otherName}`).once('value').then(s => s.val() || {});
+  if(prof.profileImage) {
+      callAvatarContainer.innerHTML = `<img src="${prof.profileImage}">`;
+  } else {
+      callAvatarContainer.innerHTML = otherName.charAt(0).toUpperCase();
+  }
+
+  if(type === 'incoming') {
+      callTypeText.textContent = "Incoming Audio Call";
+      inboundCallBtns.style.display = 'flex';
+      outboundCallBtns.style.display = 'none';
+      activeCallControls.style.display = 'none';
+  } else if(type === 'outgoing') {
+      callTypeText.textContent = "Calling...";
+      inboundCallBtns.style.display = 'none';
+      outboundCallBtns.style.display = 'flex';
+      activeCallControls.style.display = 'none';
+  }
+}
+
 async function handleIncomingAnswer(callId, c) {
   await setupWebRTC(callId, false);
   await peerConnection.setRemoteDescription(new RTCSessionDescription(c.offer));
@@ -601,32 +656,58 @@ callBtn.onclick = async () => {
   const id = `call_${Date.now()}`;
   activeCall = { id, from: username, to: privateChatWith };
   db.ref(`calls/${id}`).set({ from:username, to:privateChatWith, status:'ringing', startedAt:Date.now() });
-  callOverlay.style.display='flex'; callFrom.textContent=privateChatWith; ringtone.play();
+  showCallOverlay(privateChatWith, 'outgoing');
+  ringtone.play();
   setupWebRTC(id, true);
 };
 
 acceptCallBtn.onclick = () => db.ref(`calls/${activeCall.id}`).update({ status:'answered', answeredAt:Date.now() });
 declineCallBtn.onclick = () => { db.ref(`calls/${activeCall.id}`).update({ status:'declined' }); cleanupCall(); };
-endCallBtn.onclick = () => { db.ref(`calls/${activeCall.id}`).update({ status:'ended' }); cleanupCall(); };
+cancelCallBtn.onclick = () => { db.ref(`calls/${activeCall.id}`).update({ status:'ended' }); cleanupCall(); };
+endCallBtnBig.onclick = () => { db.ref(`calls/${activeCall.id}`).update({ status:'ended' }); cleanupCall(); };
 
 function startInCallTimer(c){
-  ringtone.pause(); callOverlay.style.display='none'; inCallBar.style.display='flex'; inCallWith.textContent = c.from === username ? c.to : c.from;
+  ringtone.pause();
+  callTypeText.textContent = "Ongoing Call";
+  inboundCallBtns.style.display = 'none';
+  outboundCallBtns.style.display = 'none';
+  activeCallControls.style.display = 'flex';
+  
   clearInterval(callTimerInterval);
   callTimerInterval = setInterval(() => {
     const diff = Date.now() - (c.answeredAt || Date.now());
     const m = String(Math.floor(diff/60000)).padStart(2,'0'), s = String(Math.floor((diff%60000)/1000)).padStart(2,'0');
-    inCallElapsed.textContent = `${m}:${s}`;
+    callTimer.textContent = `${m}:${s}`;
   }, 1000);
 }
 
 function cleanupCall(){ 
   ringtone.pause(); ringtone.currentTime=0; 
-  callOverlay.style.display='none'; inCallBar.style.display='none'; 
+  callOverlay.style.display='none'; 
   clearInterval(callTimerInterval); 
   if(peerConnection) { peerConnection.close(); peerConnection = null; }
   if(localStream) { localStream.getTracks().forEach(t => t.stop()); localStream = null; }
   activeCall = null; 
+  callTimer.textContent = "Ringing...";
+  muteBtn.classList.remove('active');
 }
+
+/* CALL CONTROLS */
+muteBtn.onclick = () => {
+    if(localStream) {
+        const audioTrack = localStream.getAudioTracks()[0];
+        audioTrack.enabled = !audioTrack.enabled;
+        muteBtn.classList.toggle('active');
+        muteBtn.textContent = audioTrack.enabled ? '🎤' : '🔇';
+    }
+};
+
+speakerBtn.onclick = () => {
+    speakerBtn.classList.toggle('active');
+    // Note: Web browsers don't allow programmatic speaker toggling on all devices easily, 
+    // but this serves as a UI state for the user.
+    showToast(speakerBtn.classList.contains('active') ? "Speaker ON" : "Speaker OFF");
+};
 
 function listenBlocks(){ 
   db.ref(`blocks/${username}`).on('value', s => {
