--- a/test2/index.html
+++ b/test2/index.html
@@ -206,7 +206,7 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
       <button id="closePrivate" style="background:none;border:0;color:var(--accent);font-size:18px;cursor:pointer">⬅</button>
       <div style="font-weight:700" id="privateTitle">Private Chat</div>
       <div style="flex:1"></div>
-      <button id="callBtn" style="background:none;border:0;color:#25d366;cursor:pointer;font-weight:700;margin-right:10px;font-size:20px">📞</button>
+      <button id="callBtn" style="background:none;border:0;color:#04AA6D;cursor:pointer;font-weight:700;margin-right:10px;font-size:20px">📞</button>
       <button id="blockBtn" class="headerActionBtn not-blocked">Block</button>
       <button id="reportBtn" class="headerActionBtn" style="margin-left:8px">Report</button>
     </div>
